# binder

./: .gitignore
examples/example_struct/: .gitignore  all_cmake_includes.hpp  config.cfg  make_bindings_via_bash.sh  make_bindings_via_cmake.py
examples/example_struct/bash_bindings/: test_struct.cpp  test_struct.modules  test_struct.sources
examples/example_struct/bash_bindings/std/: stl_vector.cpp
examples/example_struct/bash_bindings/test_struct/: test_struct.cpp
examples/example_struct/cmake_bindings/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja
examples/example_struct/cmake_bindings/test_struct/: test_struct.cpp
examples/example_struct/include/test_struct/: test_struct.hpp
source/: binder.cpp  class.cpp  class.hpp  config.cpp  config.hpp  function.cpp  type.cpp
test/: T10.inheritance.ref  T11.override.ref  T40.stl.ref  T42.stl.names.ref  T43.myTest.hpp  self-test.py  test.py
